--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -42,18 +42,6 @@
                                 Twitter</a>
                         </div>
                         <p class="w-100 text-center">&mdash; Or Sign Up! &mdash;</p>
-                        {{!-- <form action="submit" id="signup-form">
-                            <div>
-                                <label for="usernameSignup">Username: </label>
-                                <input type="text" id="usernameSignup" />
-                            </div>
-                            <div>
-                                <label for="passwordSignup">Password: </label>
-                                <input type="text" type="password" id="passwordSignup" />
-                            </div>
-                            <div>
-                                <button type="submit">Signup</button>
-                            </div> --}}
                             <form action="submit" class="signin-form">
                             <div class="form-group">
                                 <input type="text" id="usernameSignup" class="form-control" placeholder="Username" required>
@@ -69,12 +57,11 @@
                             </div>
                             <div class="form-group d-md-flex">
                                 <div class="w-50">
-                                    <label class="checkbox-wrap checkbox-primary">Remember Me
+                                    {{!-- <label class="checkbox-wrap checkbox-primary">Remember Me
                                         <input type="checkbox" checked>
                                         <span class="checkmark"></span>
-                                    </label>
+                                    </label> --}}
                                 </div>
-                                {{!-- <div class="w-50 text-md-right"> --}}
                                 </div>
                             </div>
                         </form>
