--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ flex-direction: column;
 align-items: center;
 border: #50509c;
 background-image: url(./images/wp8414787.jpeg);
-background-size: auto;
+background-size: 100%;
 background-repeat: no-repeat;
 background-color:#3b2855;
 }
@@ -49,11 +49,13 @@ a {
   text-decoration: none!important;
   font-family: 'Nunito', sans-serif!important;
   text-align: center;
-  padding: 15px;
   width: 100%;
   display: block;
   color: #d6c8e9!important;
   background: #6760c1;
+  padding-top: 15px;
+  padding-bottom: 15px;
+
 }
 
 h2 {
