--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -19,5 +19,5 @@
     </div>
 </form>
 
-<script src="../public/comment.js"></script>
-<script src="../public/logout.js"></script>
+<script src="../comment.js"></script>
+<script src="../logout.js"></script>
