--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="login-wrap p-0">
                         <h3 class="mb-4 text-center">Already have an account? Log in to gear up and game on.</h3>
-                        <form action="submit" id="loginForm" class="signin-form">
+                        <form action="/login" id="loginForm" class="signin-form">
                             <div class="form-group">
                                 <input type="text" class="form-control" id="usernameLogin" placeholder="Username" required>
                             </div>
@@ -21,7 +21,7 @@
                                     class="fa fa-fw fa-eye field-icon toggle-password"></span>
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
+                                <button type="/login" class="form-control btn btn-primary submit px-3">Sign In</button>
                             </div>
                             <div class="form-group d-md-flex">
                                 <div class="w-50">
@@ -42,7 +42,7 @@
                                 Twitter</a>
                         </div>
                         <p class="w-100 text-center">&mdash; Or Sign Up! &mdash;</p>
-                            <form action="submit" class="signin-form">
+                            <form action="/signup" class="signin-form">
                             <div class="form-group">
                                 <input type="text" id="usernameSignup" class="form-control" placeholder="Username" required>
                             </div>
@@ -53,7 +53,7 @@
                                     class="fa fa-fw fa-eye field-icon toggle-password"></span>
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="form-control btn btn-primary submit px-3">Sign up</button>
+                                <button type="/signup" class="form-control btn btn-primary submit px-3">Sign up</button>
                             </div>
                             <div class="form-group d-md-flex">
                                 <div class="w-50">
